adjust light/skybox/map; add building

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ set(ASSIMP_LINK /usr/local/Cellar/assimp/4.1.0/lib/libassimp.4.1.0.dylib)
 
 link_libraries(${OPENGL} ${GLEW_LINK} ${GLFW_LINK} ${ASSIMP_LINK})
 
-set(SOURCE_FILES "main.cpp" "glad/src/glad.c" ${DIR_SRCS} class/block.h class/block.cpp class/map.cpp class/map.h class/type.h class/skybox.cpp class/skybox.h class/box.cpp class/box.h class/light.cpp class/light.h class/plane.cpp class/plane.h)
+set(SOURCE_FILES "main.cpp" "glad/src/glad.c" ${DIR_SRCS} class/block.h class/block.cpp class/map.cpp class/map.h class/type.h class/skybox.cpp class/skybox.h class/box.cpp class/box.h class/light.cpp class/light.h class/plane.cpp class/plane.h class/maze.cpp class/maze.h)
 add_executable(Graphics ${SOURCE_FILES})
 if (APPLE)
 target_link_libraries(Graphics "-framework OpenGL")
